# nxarray

./: LICENSE  README.md  pyproject.toml  setup.py
docs/: conf.py  design.rst  index.rst  installation.rst  usage.rst
nxarray/: __init__.py  _accessors.py  _core.py  _version.py  accessors.py  core.py
src/nxarray/: __init__.py  _accessors.py  _core.py
